WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299489
[OpenXR] Fix unsafe buffer usage in OpenXRLayer.cpp
https://bugs.webkit.org/show_bug.cgi?id=299489
Summary
[OpenXR] Fix unsafe buffer usage in OpenXRLayer.cpp
Adrian Perez
Reported
2025-09-24 14:37:23 PDT
Building with Clang: /home/aperez/devel/WebKit-Android/Source/WebKit/UIProcess/XR/openxr/OpenXRLayer.cpp:338:44: warning: unsafe buffer access [-Wunsafe-buffer-usage] 338 | glBindFramebuffer(GL_DRAW_FRAMEBUFFER, m_fbosForBlitting[1]); | ^~~~~~~~~~~~~~~~~ 1 warning generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2025-09-24 14:49:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51285
EWS
Comment 2
2025-09-25 02:19:44 PDT
Committed
300512@main
(8c603d7d3af2): <
https://commits.webkit.org/300512@main
> Reviewed commits have been landed. Closing PR #51285 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-25 02:20:14 PDT
<
rdar://problem/161312130
>
Radar WebKit Bug Importer
Comment 4
2025-09-25 02:20:19 PDT
<
rdar://problem/161312164
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug