[OpenXR] Fix unsafe buffer usage in OpenXRLayer.cpp https://bugs.webkit.org/show_bug.cgi?id=299489

Reviewed by Chris Dumez.

Use an std::array for OpenXRLayer::m_fbosForBlitting, instead
of a plain array.

Canonical link: https://commits.webkit.org/300512@main